step_3/y.output
Terminals which are not used

   TOKEN_ERROR


State 85 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declaration declarationList
    3                | /* empty */

    4 declaration: functionDeclaration
    5            | variableDeclaration

    6 variableDeclaration: TK_IDENTIFIER ':' variableTypeAndValue ';'

    7 variableType: KW_BYTE
    8             | KW_SHORT
    9             | KW_LONG
   10             | KW_FLOAT
   11             | KW_DOUBLE

   12 variableTypeAndValue: KW_BYTE LIT_CHAR
   13                     | KW_BYTE LIT_INTEGER
   14                     | KW_SHORT LIT_INTEGER
   15                     | KW_LONG LIT_INTEGER
   16                     | KW_FLOAT LIT_REAL
   17                     | KW_FLOAT LIT_INTEGER
   18                     | KW_DOUBLE LIT_INTEGER
   19                     | KW_DOUBLE LIT_REAL
   20                     | KW_BYTE '[' LIT_INTEGER ']' intList
   21                     | KW_BYTE '[' LIT_INTEGER ']' charList
   22                     | KW_SHORT '[' LIT_INTEGER ']' intList
   23                     | KW_LONG '[' LIT_INTEGER ']' intList
   24                     | KW_FLOAT '[' LIT_INTEGER ']' intRealList
   25                     | KW_DOUBLE '[' LIT_INTEGER ']' intRealList
   26                     | KW_BYTE '[' LIT_INTEGER ']'
   27                     | KW_SHORT '[' LIT_INTEGER ']'
   28                     | KW_LONG '[' LIT_INTEGER ']'
   29                     | KW_FLOAT '[' LIT_INTEGER ']'
   30                     | KW_DOUBLE '[' LIT_INTEGER ']'

   31 intList: LIT_INTEGER intList
   32        | LIT_INTEGER

   33 charList: LIT_CHAR charList
   34         | LIT_CHAR

   35 intRealList: intReal intRealList
   36            | intReal

   37 intReal: LIT_INTEGER
   38        | LIT_REAL

   39 functionDeclaration: variableType TK_IDENTIFIER '(' parameters ')' command ';'

   40 parameters: parameterList
   41           | /* empty */

   42 parameterList: param ',' parameterList
   43              | param

   44 param: variableType TK_IDENTIFIER

   45 commandList: commandList command ';'
   46            | /* empty */

   47 command: attribute
   48        | '{' commandList '}'
   49        | KW_READ TK_IDENTIFIER
   50        | KW_PRINT printList
   51        | KW_RETURN expression
   52        | control
   53        | /* empty */

   54 printList: printElement printList
   55          | printElement

   56 printElement: LIT_STRING
   57             | expression

   58 control: KW_WHEN '(' expression ')' KW_THEN command
   59        | KW_WHEN '(' expression ')' KW_THEN command KW_ELSE command
   60        | KW_WHILE '(' expression ')' command
   61        | KW_FOR '(' TK_IDENTIFIER '=' expression KW_TO expression ')' command

   62 attribute: TK_IDENTIFIER '=' expression
   63          | TK_IDENTIFIER '#' expression '=' expression

   64 expression: '(' expression ')'
   65           | TK_IDENTIFIER
   66           | TK_IDENTIFIER '[' expression ']'
   67           | TK_IDENTIFIER '(' arguments ')'
   68           | LIT_INTEGER
   69           | LIT_CHAR
   70           | LIT_REAL
   71           | expression OPERATOR_LE expression
   72           | expression OPERATOR_GE expression
   73           | expression OPERATOR_EQ expression
   74           | expression OPERATOR_NE expression
   75           | expression OPERATOR_AND expression
   76           | expression OPERATOR_OR expression
   77           | expression '+' expression
   78           | expression '-' expression
   79           | expression '*' expression
   80           | expression '/' expression
   81           | expression '<' expression
   82           | expression '>' expression
   83           | expression '!' expression

   84 arguments: expression extraArgument
   85          | /* empty */

   86 extraArgument: ',' expression extraArgument
   87              | /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'#' (35) 63
'(' (40) 39 58 59 60 61 64 67
')' (41) 39 58 59 60 61 64 67
'*' (42) 79
'+' (43) 77
',' (44) 42 86
'-' (45) 78
'/' (47) 80
':' (58) 6
';' (59) 6 39 45
'<' (60) 81
'=' (61) 61 62 63
'>' (62) 82
'[' (91) 20 21 22 23 24 25 26 27 28 29 30 66
']' (93) 20 21 22 23 24 25 26 27 28 29 30 66
'{' (123) 48
'}' (125) 48
error (256)
KW_BYTE (258) 7 12 13 20 21 26
KW_SHORT (259) 8 14 22 27
KW_LONG (260) 9 15 23 28
KW_FLOAT (261) 10 16 17 24 29
KW_DOUBLE (262) 11 18 19 25 30
KW_WHEN (263) 58 59
KW_THEN (264) 58 59
KW_ELSE (265) 59
KW_WHILE (266) 60
KW_FOR (267) 61
KW_TO (268) 61
KW_READ (269) 49
KW_RETURN (270) 51
KW_PRINT (271) 50
OPERATOR_LE (272) 71
OPERATOR_GE (273) 72
OPERATOR_EQ (274) 73
OPERATOR_NE (275) 74
OPERATOR_AND (276) 75
OPERATOR_OR (277) 76
LIT_INTEGER (278) 13 14 15 17 18 20 21 22 23 24 25 26 27 28 29 30 31
    32 37 68
LIT_REAL (279) 16 19 38 70
LIT_CHAR (280) 12 33 34 69
LIT_STRING (281) 56
TK_IDENTIFIER (282) 6 39 44 49 61 62 63 65 66 67
TOKEN_ERROR (283)
LOWER_THAN_ELSE (284)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarationList (50)
    on left: 2 3, on right: 1 2
declaration (51)
    on left: 4 5, on right: 2
variableDeclaration (52)
    on left: 6, on right: 5
variableType (53)
    on left: 7 8 9 10 11, on right: 39 44
variableTypeAndValue (54)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30, on right: 6
intList (55)
    on left: 31 32, on right: 20 22 23 31
charList (56)
    on left: 33 34, on right: 21 33
intRealList (57)
    on left: 35 36, on right: 24 25 35
intReal (58)
    on left: 37 38, on right: 35 36
functionDeclaration (59)
    on left: 39, on right: 4
parameters (60)
    on left: 40 41, on right: 39
parameterList (61)
    on left: 42 43, on right: 40 42
param (62)
    on left: 44, on right: 42 43
commandList (63)
    on left: 45 46, on right: 45 48
command (64)
    on left: 47 48 49 50 51 52 53, on right: 39 45 58 59 60 61
printList (65)
    on left: 54 55, on right: 50 54
printElement (66)
    on left: 56 57, on right: 54 55
control (67)
    on left: 58 59 60 61, on right: 52
attribute (68)
    on left: 62 63, on right: 47
expression (69)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83, on right: 51 57 58 59 60 61 62 63 64 66 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 86
arguments (70)
    on left: 84 85, on right: 67
extraArgument (71)
    on left: 86 87, on right: 84 86


state 0

    0 $accept: . program $end

    KW_BYTE        shift, and go to state 1
    KW_SHORT       shift, and go to state 2
    KW_LONG        shift, and go to state 3
    KW_FLOAT       shift, and go to state 4
    KW_DOUBLE      shift, and go to state 5
    TK_IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 3 (declarationList)

    program              go to state 7
    declarationList      go to state 8
    declaration          go to state 9
    variableDeclaration  go to state 10
    variableType         go to state 11
    functionDeclaration  go to state 12


state 1

    7 variableType: KW_BYTE .

    $default  reduce using rule 7 (variableType)


state 2

    8 variableType: KW_SHORT .

    $default  reduce using rule 8 (variableType)


state 3

    9 variableType: KW_LONG .

    $default  reduce using rule 9 (variableType)


state 4

   10 variableType: KW_FLOAT .

    $default  reduce using rule 10 (variableType)


state 5

   11 variableType: KW_DOUBLE .

    $default  reduce using rule 11 (variableType)


state 6

    6 variableDeclaration: TK_IDENTIFIER . ':' variableTypeAndValue ';'

    ':'  shift, and go to state 13


state 7

    0 $accept: program . $end

    $end  shift, and go to state 14


state 8

    1 program: declarationList .

    $default  reduce using rule 1 (program)


state 9

    2 declarationList: declaration . declarationList

    KW_BYTE        shift, and go to state 1
    KW_SHORT       shift, and go to state 2
    KW_LONG        shift, and go to state 3
    KW_FLOAT       shift, and go to state 4
    KW_DOUBLE      shift, and go to state 5
    TK_IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 3 (declarationList)

    declarationList      go to state 15
    declaration          go to state 9
    variableDeclaration  go to state 10
    variableType         go to state 11
    functionDeclaration  go to state 12


state 10

    5 declaration: variableDeclaration .

    $default  reduce using rule 5 (declaration)


state 11

   39 functionDeclaration: variableType . TK_IDENTIFIER '(' parameters ')' command ';'

    TK_IDENTIFIER  shift, and go to state 16


state 12

    4 declaration: functionDeclaration .

    $default  reduce using rule 4 (declaration)


state 13

    6 variableDeclaration: TK_IDENTIFIER ':' . variableTypeAndValue ';'

    KW_BYTE    shift, and go to state 17
    KW_SHORT   shift, and go to state 18
    KW_LONG    shift, and go to state 19
    KW_FLOAT   shift, and go to state 20
    KW_DOUBLE  shift, and go to state 21

    variableTypeAndValue  go to state 22


state 14

    0 $accept: program $end .

    $default  accept


state 15

    2 declarationList: declaration declarationList .

    $default  reduce using rule 2 (declarationList)


state 16

   39 functionDeclaration: variableType TK_IDENTIFIER . '(' parameters ')' command ';'

    '('  shift, and go to state 23


state 17

   12 variableTypeAndValue: KW_BYTE . LIT_CHAR
   13                     | KW_BYTE . LIT_INTEGER
   20                     | KW_BYTE . '[' LIT_INTEGER ']' intList
   21                     | KW_BYTE . '[' LIT_INTEGER ']' charList
   26                     | KW_BYTE . '[' LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 24
    LIT_CHAR     shift, and go to state 25
    '['          shift, and go to state 26


state 18

   14 variableTypeAndValue: KW_SHORT . LIT_INTEGER
   22                     | KW_SHORT . '[' LIT_INTEGER ']' intList
   27                     | KW_SHORT . '[' LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 27
    '['          shift, and go to state 28


state 19

   15 variableTypeAndValue: KW_LONG . LIT_INTEGER
   23                     | KW_LONG . '[' LIT_INTEGER ']' intList
   28                     | KW_LONG . '[' LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 29
    '['          shift, and go to state 30


state 20

   16 variableTypeAndValue: KW_FLOAT . LIT_REAL
   17                     | KW_FLOAT . LIT_INTEGER
   24                     | KW_FLOAT . '[' LIT_INTEGER ']' intRealList
   29                     | KW_FLOAT . '[' LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 31
    LIT_REAL     shift, and go to state 32
    '['          shift, and go to state 33


state 21

   18 variableTypeAndValue: KW_DOUBLE . LIT_INTEGER
   19                     | KW_DOUBLE . LIT_REAL
   25                     | KW_DOUBLE . '[' LIT_INTEGER ']' intRealList
   30                     | KW_DOUBLE . '[' LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 34
    LIT_REAL     shift, and go to state 35
    '['          shift, and go to state 36


state 22

    6 variableDeclaration: TK_IDENTIFIER ':' variableTypeAndValue . ';'

    ';'  shift, and go to state 37


state 23

   39 functionDeclaration: variableType TK_IDENTIFIER '(' . parameters ')' command ';'

    KW_BYTE    shift, and go to state 1
    KW_SHORT   shift, and go to state 2
    KW_LONG    shift, and go to state 3
    KW_FLOAT   shift, and go to state 4
    KW_DOUBLE  shift, and go to state 5

    $default  reduce using rule 41 (parameters)

    variableType   go to state 38
    parameters     go to state 39
    parameterList  go to state 40
    param          go to state 41


state 24

   13 variableTypeAndValue: KW_BYTE LIT_INTEGER .

    $default  reduce using rule 13 (variableTypeAndValue)


state 25

   12 variableTypeAndValue: KW_BYTE LIT_CHAR .

    $default  reduce using rule 12 (variableTypeAndValue)


state 26

   20 variableTypeAndValue: KW_BYTE '[' . LIT_INTEGER ']' intList
   21                     | KW_BYTE '[' . LIT_INTEGER ']' charList
   26                     | KW_BYTE '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 42


state 27

   14 variableTypeAndValue: KW_SHORT LIT_INTEGER .

    $default  reduce using rule 14 (variableTypeAndValue)


state 28

   22 variableTypeAndValue: KW_SHORT '[' . LIT_INTEGER ']' intList
   27                     | KW_SHORT '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 43


state 29

   15 variableTypeAndValue: KW_LONG LIT_INTEGER .

    $default  reduce using rule 15 (variableTypeAndValue)


state 30

   23 variableTypeAndValue: KW_LONG '[' . LIT_INTEGER ']' intList
   28                     | KW_LONG '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 44


state 31

   17 variableTypeAndValue: KW_FLOAT LIT_INTEGER .

    $default  reduce using rule 17 (variableTypeAndValue)


state 32

   16 variableTypeAndValue: KW_FLOAT LIT_REAL .

    $default  reduce using rule 16 (variableTypeAndValue)


state 33

   24 variableTypeAndValue: KW_FLOAT '[' . LIT_INTEGER ']' intRealList
   29                     | KW_FLOAT '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 45


state 34

   18 variableTypeAndValue: KW_DOUBLE LIT_INTEGER .

    $default  reduce using rule 18 (variableTypeAndValue)


state 35

   19 variableTypeAndValue: KW_DOUBLE LIT_REAL .

    $default  reduce using rule 19 (variableTypeAndValue)


state 36

   25 variableTypeAndValue: KW_DOUBLE '[' . LIT_INTEGER ']' intRealList
   30                     | KW_DOUBLE '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 46


state 37

    6 variableDeclaration: TK_IDENTIFIER ':' variableTypeAndValue ';' .

    $default  reduce using rule 6 (variableDeclaration)


state 38

   44 param: variableType . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 47


state 39

   39 functionDeclaration: variableType TK_IDENTIFIER '(' parameters . ')' command ';'

    ')'  shift, and go to state 48


state 40

   40 parameters: parameterList .

    $default  reduce using rule 40 (parameters)


state 41

   42 parameterList: param . ',' parameterList
   43              | param .

    ','  shift, and go to state 49

    $default  reduce using rule 43 (parameterList)


state 42

   20 variableTypeAndValue: KW_BYTE '[' LIT_INTEGER . ']' intList
   21                     | KW_BYTE '[' LIT_INTEGER . ']' charList
   26                     | KW_BYTE '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 50


state 43

   22 variableTypeAndValue: KW_SHORT '[' LIT_INTEGER . ']' intList
   27                     | KW_SHORT '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 51


state 44

   23 variableTypeAndValue: KW_LONG '[' LIT_INTEGER . ']' intList
   28                     | KW_LONG '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 52


state 45

   24 variableTypeAndValue: KW_FLOAT '[' LIT_INTEGER . ']' intRealList
   29                     | KW_FLOAT '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 53


state 46

   25 variableTypeAndValue: KW_DOUBLE '[' LIT_INTEGER . ']' intRealList
   30                     | KW_DOUBLE '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 54


state 47

   44 param: variableType TK_IDENTIFIER .

    $default  reduce using rule 44 (param)


state 48

   39 functionDeclaration: variableType TK_IDENTIFIER '(' parameters ')' . command ';'

    KW_WHEN        shift, and go to state 55
    KW_WHILE       shift, and go to state 56
    KW_FOR         shift, and go to state 57
    KW_READ        shift, and go to state 58
    KW_RETURN      shift, and go to state 59
    KW_PRINT       shift, and go to state 60
    TK_IDENTIFIER  shift, and go to state 61
    '{'            shift, and go to state 62

    $default  reduce using rule 53 (command)

    command    go to state 63
    control    go to state 64
    attribute  go to state 65


state 49

   42 parameterList: param ',' . parameterList

    KW_BYTE    shift, and go to state 1
    KW_SHORT   shift, and go to state 2
    KW_LONG    shift, and go to state 3
    KW_FLOAT   shift, and go to state 4
    KW_DOUBLE  shift, and go to state 5

    variableType   go to state 38
    parameterList  go to state 66
    param          go to state 41


state 50

   20 variableTypeAndValue: KW_BYTE '[' LIT_INTEGER ']' . intList
   21                     | KW_BYTE '[' LIT_INTEGER ']' . charList
   26                     | KW_BYTE '[' LIT_INTEGER ']' .

    LIT_INTEGER  shift, and go to state 67
    LIT_CHAR     shift, and go to state 68

    $default  reduce using rule 26 (variableTypeAndValue)

    intList   go to state 69
    charList  go to state 70


state 51

   22 variableTypeAndValue: KW_SHORT '[' LIT_INTEGER ']' . intList
   27                     | KW_SHORT '[' LIT_INTEGER ']' .

    LIT_INTEGER  shift, and go to state 67

    $default  reduce using rule 27 (variableTypeAndValue)

    intList  go to state 71


state 52

   23 variableTypeAndValue: KW_LONG '[' LIT_INTEGER ']' . intList
   28                     | KW_LONG '[' LIT_INTEGER ']' .

    LIT_INTEGER  shift, and go to state 67

    $default  reduce using rule 28 (variableTypeAndValue)

    intList  go to state 72


state 53

   24 variableTypeAndValue: KW_FLOAT '[' LIT_INTEGER ']' . intRealList
   29                     | KW_FLOAT '[' LIT_INTEGER ']' .

    LIT_INTEGER  shift, and go to state 73
    LIT_REAL     shift, and go to state 74

    $default  reduce using rule 29 (variableTypeAndValue)

    intRealList  go to state 75
    intReal      go to state 76


state 54

   25 variableTypeAndValue: KW_DOUBLE '[' LIT_INTEGER ']' . intRealList
   30                     | KW_DOUBLE '[' LIT_INTEGER ']' .

    LIT_INTEGER  shift, and go to state 73
    LIT_REAL     shift, and go to state 74

    $default  reduce using rule 30 (variableTypeAndValue)

    intRealList  go to state 77
    intReal      go to state 76


state 55

   58 control: KW_WHEN . '(' expression ')' KW_THEN command
   59        | KW_WHEN . '(' expression ')' KW_THEN command KW_ELSE command

    '('  shift, and go to state 78


state 56

   60 control: KW_WHILE . '(' expression ')' command

    '('  shift, and go to state 79


state 57

   61 control: KW_FOR . '(' TK_IDENTIFIER '=' expression KW_TO expression ')' command

    '('  shift, and go to state 80


state 58

   49 command: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 81


state 59

   51 command: KW_RETURN . expression

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 87


state 60

   50 command: KW_PRINT . printList

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    LIT_STRING     shift, and go to state 88
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    printList     go to state 89
    printElement  go to state 90
    expression    go to state 91


state 61

   62 attribute: TK_IDENTIFIER . '=' expression
   63          | TK_IDENTIFIER . '#' expression '=' expression

    '='  shift, and go to state 92
    '#'  shift, and go to state 93


state 62

   48 command: '{' . commandList '}'

    $default  reduce using rule 46 (commandList)

    commandList  go to state 94


state 63

   39 functionDeclaration: variableType TK_IDENTIFIER '(' parameters ')' command . ';'

    ';'  shift, and go to state 95


state 64

   52 command: control .

    $default  reduce using rule 52 (command)


state 65

   47 command: attribute .

    $default  reduce using rule 47 (command)


state 66

   42 parameterList: param ',' parameterList .

    $default  reduce using rule 42 (parameterList)


state 67

   31 intList: LIT_INTEGER . intList
   32        | LIT_INTEGER .

    LIT_INTEGER  shift, and go to state 67

    $default  reduce using rule 32 (intList)

    intList  go to state 96


state 68

   33 charList: LIT_CHAR . charList
   34         | LIT_CHAR .

    LIT_CHAR  shift, and go to state 68

    $default  reduce using rule 34 (charList)

    charList  go to state 97


state 69

   20 variableTypeAndValue: KW_BYTE '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 20 (variableTypeAndValue)


state 70

   21 variableTypeAndValue: KW_BYTE '[' LIT_INTEGER ']' charList .

    $default  reduce using rule 21 (variableTypeAndValue)


state 71

   22 variableTypeAndValue: KW_SHORT '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 22 (variableTypeAndValue)


state 72

   23 variableTypeAndValue: KW_LONG '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 23 (variableTypeAndValue)


state 73

   37 intReal: LIT_INTEGER .

    $default  reduce using rule 37 (intReal)


state 74

   38 intReal: LIT_REAL .

    $default  reduce using rule 38 (intReal)


state 75

   24 variableTypeAndValue: KW_FLOAT '[' LIT_INTEGER ']' intRealList .

    $default  reduce using rule 24 (variableTypeAndValue)


state 76

   35 intRealList: intReal . intRealList
   36            | intReal .

    LIT_INTEGER  shift, and go to state 73
    LIT_REAL     shift, and go to state 74

    $default  reduce using rule 36 (intRealList)

    intRealList  go to state 98
    intReal      go to state 76


state 77

   25 variableTypeAndValue: KW_DOUBLE '[' LIT_INTEGER ']' intRealList .

    $default  reduce using rule 25 (variableTypeAndValue)


state 78

   58 control: KW_WHEN '(' . expression ')' KW_THEN command
   59        | KW_WHEN '(' . expression ')' KW_THEN command KW_ELSE command

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 99


state 79

   60 control: KW_WHILE '(' . expression ')' command

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 100


state 80

   61 control: KW_FOR '(' . TK_IDENTIFIER '=' expression KW_TO expression ')' command

    TK_IDENTIFIER  shift, and go to state 101


state 81

   49 command: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 49 (command)


state 82

   68 expression: LIT_INTEGER .

    $default  reduce using rule 68 (expression)


state 83

   70 expression: LIT_REAL .

    $default  reduce using rule 70 (expression)


state 84

   69 expression: LIT_CHAR .

    $default  reduce using rule 69 (expression)


state 85

   65 expression: TK_IDENTIFIER .
   66           | TK_IDENTIFIER . '[' expression ']'
   67           | TK_IDENTIFIER . '(' arguments ')'

    '['  shift, and go to state 102
    '('  shift, and go to state 103

    '('       [reduce using rule 65 (expression)]
    $default  reduce using rule 65 (expression)


state 86

   64 expression: '(' . expression ')'

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 104


state 87

   51 command: KW_RETURN expression .
   71 expression: expression . OPERATOR_LE expression
   72           | expression . OPERATOR_GE expression
   73           | expression . OPERATOR_EQ expression
   74           | expression . OPERATOR_NE expression
   75           | expression . OPERATOR_AND expression
   76           | expression . OPERATOR_OR expression
   77           | expression . '+' expression
   78           | expression . '-' expression
   79           | expression . '*' expression
   80           | expression . '/' expression
   81           | expression . '<' expression
   82           | expression . '>' expression
   83           | expression . '!' expression

    OPERATOR_LE   shift, and go to state 105
    OPERATOR_GE   shift, and go to state 106
    OPERATOR_EQ   shift, and go to state 107
    OPERATOR_NE   shift, and go to state 108
    OPERATOR_AND  shift, and go to state 109
    OPERATOR_OR   shift, and go to state 110
    '<'           shift, and go to state 111
    '>'           shift, and go to state 112
    '!'           shift, and go to state 113
    '-'           shift, and go to state 114
    '+'           shift, and go to state 115
    '*'           shift, and go to state 116
    '/'           shift, and go to state 117

    $default  reduce using rule 51 (command)


state 88

   56 printElement: LIT_STRING .

    $default  reduce using rule 56 (printElement)


state 89

   50 command: KW_PRINT printList .

    $default  reduce using rule 50 (command)


state 90

   54 printList: printElement . printList
   55          | printElement .

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    LIT_STRING     shift, and go to state 88
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    $default  reduce using rule 55 (printList)

    printList     go to state 118
    printElement  go to state 90
    expression    go to state 91


state 91

   57 printElement: expression .
   71 expression: expression . OPERATOR_LE expression
   72           | expression . OPERATOR_GE expression
   73           | expression . OPERATOR_EQ expression
   74           | expression . OPERATOR_NE expression
   75           | expression . OPERATOR_AND expression
   76           | expression . OPERATOR_OR expression
   77           | expression . '+' expression
   78           | expression . '-' expression
   79           | expression . '*' expression
   80           | expression . '/' expression
   81           | expression . '<' expression
   82           | expression . '>' expression
   83           | expression . '!' expression

    OPERATOR_LE   shift, and go to state 105
    OPERATOR_GE   shift, and go to state 106
    OPERATOR_EQ   shift, and go to state 107
    OPERATOR_NE   shift, and go to state 108
    OPERATOR_AND  shift, and go to state 109
    OPERATOR_OR   shift, and go to state 110
    '<'           shift, and go to state 111
    '>'           shift, and go to state 112
    '!'           shift, and go to state 113
    '-'           shift, and go to state 114
    '+'           shift, and go to state 115
    '*'           shift, and go to state 116
    '/'           shift, and go to state 117

    $default  reduce using rule 57 (printElement)


state 92

   62 attribute: TK_IDENTIFIER '=' . expression

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 119


state 93

   63 attribute: TK_IDENTIFIER '#' . expression '=' expression

    LIT_INTEGER    shift, and go to state 82
    LIT_REAL       shift, and go to state 83
    LIT_CHAR       shift, and go to state 84
    TK_IDENTIFIER  shift, and go to state 85
    '('            shift, and go to state 86

    expression  go to state 120


state 94

   45 commandList: commandList . command ';'
   48 command: '{' commandList . '}'

    KW_WHEN        shift, and go to state 55
    KW_WHILE       shift, and go to state 56
    KW_FOR         shift, and go to state 57
    KW_READ        shift, and go to state 58
    KW_RETURN      shift, and go to state 59
    KW_PRINT       shift, and go to state 60
    TK_IDENTIFIER  shift, and go to state 61
    '{'            shift, and go to state 62
    '}'            shift, and go to state 121

    $default  reduce using rule 53 (command)

    command    go to state 122
    control    go to state 64
    attribute  go to state 65


state 95

   39 functionDeclaration: variableType TK_IDENTIFIER '(' parameters ')' command ';' .

    $default  reduce using rule 39 (functionDeclaration)


state 96

   31 intList: LIT_INTEGER intList .

    $default  reduce using rule 31 (intList)


state 97

   33 charList: LIT_CHAR charList .

    $default  reduce using rule 33 (charList)


state 98

   35 intRealList: intReal intRealList .

    $default  reduce using rule 35 (intRealList)


state 99
